--- a/ProjetoAutoprem/AutoPrem/AutoPrem.App/AutoPrem.App.csproj
+++ b/ProjetoAutoprem/AutoPrem/AutoPrem.App/AutoPrem.App.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -14,5 +13,11 @@
     <Reference Include="AutoPrem.Core">
       <HintPath>..\AutoPrem.Core\bin\Debug\net7.0\AutoPrem.Core.dll</HintPath>
     </Reference>
+    <Reference Include="AutoPrem.Services">
+      <HintPath>..\AutoPrem.Services\bin\Debug\net7.0\AutoPrem.Services.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 </Project>
